--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "nodejs ./bin/www"
+    "start": "node auth_server.js"
   },
   "dependencies": {
-    "express": "~4.0.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
+    "connect-mongo": "^1.3.2",
+    "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
-    "jade": "~1.3.0"
+    "ejs": "^2.5.6",
+    "express": "~4.0.0",
+    "express-session": "^1.15.2",
+    "jade": "~1.3.0",
+    "mongoose": "^4.9.4",
+    "morgan": "~1.0.0",
+    "static-favicon": "~1.0.0"
   }
 }
